i edited my title

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>🍽️ You're Invited! 🍽️</h1>
+        <h1>🍽️ You're Invited! for Dinner Party 🍽️</h1>
         <p class="subtitle">Join us for an elegant dinner party</p>
         
         <div class="details">
