i added two more pages

--- a/index.html
+++ b/index.html
@@ -32,7 +32,8 @@
         <p style="color: #666; margin: 20px 0; font-size: 14px;">
             We look forward to sharing an evening of fine dining and great company with you.
         </p>
-        
+        <a href="subpages/contact.html">contact</a>
+        <a href="subpages/services.html">Services</a>
         <button class="rsvp-button">RSVP Now</button>
     </div>
 </body>
